# GAMES102_Assignment

./: README.md
hw1/: CMakeLists.txt
hw1/Components/: CanvasData.h
src/hw1/: CMakeLists.txt
src/hw1/Components/details/: CanvasData_AutoRefl.inl
src/hw1/Systems/: CanvasSystem.cpp
src/hw2/: CMakeLists.txt  rbf_net_2.py
src/hw2/Components/: CanvasData.h
src/hw2/Components/details/: CanvasData_AutoRefl.inl
src/hw2/Systems/: CanvasSystem.cpp
src/hw3/: CMakeLists.txt  main_test.py  rbf_net.py
src/hw3/Components/: CanvasData.h
src/hw3/Components/details/: CanvasData_AutoRefl.inl
src/hw3/Systems/: CanvasSystem.cpp
src/hw4/: CMakeLists.txt
src/hw4/Components/: CanvasData.h  SplineCurve.h  tools.h
src/hw4/Components/details/: CanvasData_AutoRefl.inl
src/hw4/Systems/: CanvasSystem.cpp
src/hw5/: CMakeLists.txt  main.cpp  rbf_net_2.py
src/hw5/Components/: CanvasData.h
src/hw5/Components/details/: CanvasData_AutoRefl.inl
src/hw5/Systems/: CanvasSystem.cpp
src/hw6/Components/: DenoiseData.h
src/hw6/Components/details/: DenoiseData_AutoRefl.inl
src/hw6/Systems/: DenoiseSystem.cpp
src/hw7/Components/: DenoiseData.h
src/hw7/Components/details/: DenoiseData_AutoRefl.inl
src/hw7/Systems/: DenoiseSystem.cpp
src/hw8/: CMakeLists.txt
src/hw8/Components/: CanvasData.h
src/hw8/Components/details/: CanvasData_AutoRefl.inl
src/hw8/Systems/: CanvasSystem.cpp
src/hw9/: CMakeLists.txt
src/hw9/Components/: DenoiseData.h
src/hw9/Components/details/: DenoiseData_AutoRefl.inl
src/hw9/Systems/: DenoiseSystem.cpp  QEM.cpp  QEM.h
